[gd_scene load_steps=7 format=3 uid="uid://c6a5n6xmmpdhm"]

[ext_resource type="Texture2D" uid="uid://b556i28ichfx1" path="res://graphics/enemies/scout.png" id="1_m1e3h"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_mnft6"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_8foyo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_22weg"]
shader = ExtResource("2_8foyo")
shader_parameter/color = Color(0.341176, 0.996078, 0.929412, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xetkb"]
radius = 54.0093

[sub_resource type="CircleShape2D" id="CircleShape2D_yamyx"]
radius = 883.02

[node name="Scout" type="CharacterBody2D" groups=["Entities", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_mnft6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_22weg")
position = Vector2(10, 26)
rotation = 1.5708
texture = ExtResource("1_m1e3h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-22, 2)
shape = SubResource("CircleShape2D_xetkb")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_yamyx")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(80, -29)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(87, 10)

[node name="LaserCooldown" type="Timer" parent="."]
one_shot = true

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
